Bug fixes, code improvements, improve code quality